<resources>
    <string name="app_name">First_App</string>
    <string name="Reset">Reset</string>
    <string name="Add_1">+1 POINT</string>
    <string name="Add_2">+2 POINT</string>
    <string name="Add_3">+3 POINT</string>
    <string name="TeamA">TeamA</string>
    <string name="TeamB">TeamB</string>
    <string name="change">转换</string>
    <string name="imput">温度转换器</string>
    <string name="imput_centidegree">请输入摄氏度</string>
    <string name="switch1">跳转至比赛计分</string>
    <string name="money1">输入外币</string>
    <string name="Exchanange">可兑换人民币</string>
    <string name="USD">USD</string>
    <string name="THB">THB</string>
    <string name="GBP">GBP</string>
    <string name="JPY">JPY</string>
    <string name="config">CONFIG</string>
    <string name="save">SAVE</string>
    <string name="setting">setting</string>
    <string name="open_list">Open_new_list</string>
    <string name="input_hint">输入金额</string>
    <string name="no_data">NO Data</string>
</resources>
