<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".rate">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:shadowColor="@color/colorAccent"
            android:textColor="#990326"
            android:text="@string/Exchanange"
            android:textSize="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp"
            android:gravity="center"
            android:id="@+id/tv_forign"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/money1"
        android:inputType="number"
        android:id="@+id/et_imput"
        android:singleLine="true"
        android:layout_marginTop="24dp"
        android:textSize="30dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/USD"
        android:layout_marginTop="24dp"
        android:text="@string/USD"
        android:onClick="btnUSD"
        android:gravity="center"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/GBD"
        android:onClick="btnGBP"
        android:layout_marginTop="24dp"
        android:text="@string/GBP"
        android:gravity="center"/>
    <Button
        android:layout_width="150dp"
        android:onClick="btnJPY"
        android:layout_height="wrap_content"
        android:id="@+id/JPY"
        android:layout_marginTop="24dp"
        android:text="@string/JPY"
        android:gravity="center"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/THB"
        android:onClick="btnTHB"
        android:layout_marginTop="24dp"
        android:text="@string/THB"
        android:gravity="center"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/config"
        android:text="@string/config"
        android:onClick="btnSwitchConfig"
        android:gravity="center"/>

</LinearLayout>