<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="446dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TeamA"
            android:id="@+id/teamName"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:padding="20dp"
            android:text="0"
            android:id="@+id/score"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="100sp" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:onClick="btnAdd1"
            android:text="@string/Add_1" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:onClick="btnAdd2"
            android:text="@string/Add_2" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="btnAdd3"
            android:text="@string/Add_3" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_Reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:onClick="btnReset"
        android:text="@string/Reset" />

</RelativeLayout>



